update02' git commit -m update02
git add .

--- a/meditation.html
+++ b/meditation.html
@@ -76,16 +76,13 @@
             </div>
             <div class="tri-below"></div>  
             <ul class="col-lg-12 d-flex justify-content-center">
-                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="border:;
-            top: -30%">
+                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="top: -30%">
                     <div><h2 style="letter-spacing: 0.5rem;">焦慮</h2><p style="font-size:1.2rem; margin-top: 20px">要是我搞砸了怎麼辦？</p></div>
                 </li>
-                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="border:;
-            top: 30%">
+                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="top: 30%">
                     <div><h2 style="letter-spacing: 0.5rem;">絕望</h2><p style="font-size:1.2rem; margin-top: 20px">每天都好想哭笑不出來...</p></div>
                 </li>
-                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="border:;
-            top: -30%">
+                <li class="col-3 text-center d-flex flex-wrap justify-content-center" style="top: -30%">
                     <div><h2 style="letter-spacing: 0.5rem;">憤怒</h2><p style="font-size:1.2rem; margin-top: 20px">為什麼他們要這樣對我！？</p></div>
                 </li>
                 
