--- a/meditation.html
+++ b/meditation.html
@@ -24,10 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"> Go back to Rachel <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Next Journey</a>
+                        <a class="nav-link" href="./index.html"> Go back to Rachel <span class="sr-only">(current)</span></a>
                     </li>
 
                 </ul>
